Add : .gitignore 추가

--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "fankimm@icloud.com",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "p5js": "^1.2.18"
+  }
 }
