--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "fankimm@icloud.com",
   "license": "MIT",
   "dependencies": {
-    "p5js": "^1.2.18"
+    "global": "^4.4.0",
+    "p5": "^1.5.0"
   }
 }
